--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,4 +2,16 @@
     <string name="app_name">MediQuick</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="blood_abo">
+        <item>A</item>
+        <item>B</item>
+        <item>O</item>
+        <item>AB</item>
+    </string-array>
+
+    <!-- Rh 혈액형 배열 -->
+    <string-array name="blood_rh">
+        <item>+</item>
+        <item>-</item>
+    </string-array>
 </resources>
