[🔧 LITTLE_FIX] 혈액 형 선택 없음 사항 추가 [⚙️ FEAT] 체크박스 연동

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string-array name="blood_abo">
+        <item>선택 안함</item>
         <item>A</item>
         <item>B</item>
         <item>O</item>
@@ -11,6 +12,7 @@
 
     <!-- Rh 혈액형 배열 -->
     <string-array name="blood_rh">
+        <item>선택 안함</item>
         <item>+</item>
         <item>-</item>
     </string-array>
