--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,18 +2,17 @@
     <string name="app_name">MediQuick</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string-array name="blood_abo">
-        <item>선택 안함</item>
-        <item>A</item>
-        <item>B</item>
-        <item>O</item>
-        <item>AB</item>
-    </string-array>
 
-    <!-- Rh 혈액형 배열 -->
-    <string-array name="blood_rh">
-        <item>선택 안함</item>
-        <item>+</item>
-        <item>-</item>
+    <!-- 혈액형 전체 배열 (하나의 스피너에서 사용) -->
+    <string-array name="blood_types">
+        <item>선택안함</item>
+        <item>A+</item>
+        <item>B+</item>
+        <item>O+</item>
+        <item>AB+</item>
+        <item>A-</item>
+        <item>B-</item>
+        <item>O-</item>
+        <item>AB-</item>
     </string-array>
 </resources>
